Fix build context paths for Coolify deployment
- Change docker-compose context from .. to ../ for correct path resolution
- Fix Dockerfile COPY command to use . instead of .. since context is repo root
- This should resolve the 'lstat /artifacts/coolify' error

--- a/coolify/Dockerfile
+++ b/coolify/Dockerfile
@@ -69,8 +69,8 @@ WORKDIR /app
 # Switch back to root to copy files and set permissions
 USER root
 
-# Copy application files
-COPY --chown=hive:hive .. .
+# Copy application files from repo root (build context)
+COPY --chown=hive:hive . .
 
 # Ensure scripts are executable
 RUN chmod +x *.mjs || true
