--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-assistant/hive-mind",
-  "version": "0.14.3"
+  "version": "0.14.3",
   "description": "AI-powered issue solver and hive mind for collaborative problem solving",
   "main": "src/hive.mjs",
   "type": "module",
@@ -38,7 +38,7 @@
     "node": ">=18.0.0"
   },
   "files": [
-    "src"
+    "src",
     "*.md"
   ],
   "devDependencies": {
